--- a/docs/初阶-简单接入机器人.md
+++ b/docs/初阶-简单接入机器人.md
@@ -29,11 +29,11 @@
      path: "http://192.168.0.102:33800"
      ```
    - **配置监听地址**：确保没有端口冲突，可以保持默认。
-   - **上报消息地址**：
+   - **上报消息地址**(在onebotv11实现端配置,指向gsk-llm)：
      ```
      path: "http://127.0.0.1:46233/gensokyo"
      ```
-   - **配置 OneBot v11 的正向 HTTP API 地址**：
+   - **配置 OneBot v11 的正向 HTTP API 地址**(在gsk-llm配置,指向onebotv11实现端)：
      ```
      http://192.168.0.102:33800(该地址是onebotv11实现端的所在ip地址:http监听端口)
      ```
