--- a/docs/中级-轻松对接豆包大模型.md
+++ b/docs/中级-轻松对接豆包大模型.md
@@ -33,4 +33,9 @@ gptSseType: 0
 standardGptApi: true  # 标准的gptApi，openai和groq需要开启。这里豆包也需要保持true状态。
 ```
 
+然后将config.yml上方的apiType修改为2(豆包api格式和openai兼容)
+```yaml
+apiType : 2
+```
+
 确保将上述配置项中的 `"ep-这里是接入点名称，ep开头的"` 和 `"这里是apikey"` 替换为您在豆包管理控制台中获取的实际接入点名称和 API Key。
